hphp/hack/test/typecheck/suspend_outside_of_coroutines3.php.exp
File "suspend_outside_of_coroutines3.php", line 5, characters 8-19:
suspend is only allowed in coroutines. (NastCheck[3038])
