hphp/hack/test/typecheck/suspend_outside_of_coroutines3.php
<?hh // strict

function f($b): Iterator<int> {
  yield 10;
  $a = suspend $b();
}
